[package]
name = "deft_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deft_reversi_engine = { path = "./deft-reversi-engine" } 
wasm-bindgen = {version = "0.2.87", features = ["serde-serialize"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"


[lib]
crate-type=["cdylib"]

[profile.release]
lto = true
opt-level = 3